css 완료/페이지이동버튼 빼고..

--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -24,7 +24,7 @@
 
             <div class="mypage_sub-bar">
                 <input class="mypage_list-checkbox"  type="checkbox" name="" id="checkbox">
-                <p>작성자</p>
+                <p>글쓴이</p>
                 <p>제목</p>
             </div>
 
