--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head %}
-	<link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+	<link rel="stylesheet" href="{% static 'css/community.css' %}">
 {% endblock %}
 {% block content %}
 <div class="com_container">
