--- a/checkmate/templates/infoWrite.html
+++ b/checkmate/templates/infoWrite.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+<link rel="stylesheet" href="{% static 'css/write.css' %}">
 
 {% endblock %}
 
