--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/community,info.css' %}">
+<link rel="stylesheet" href="{% static 'css/community.css' %}">
 {% endblock %}
 {% block content %}
 <div>
@@ -49,7 +49,7 @@
 
 
     </div>
-    {% endfor %}
+
     <div>
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">◀</a></li>
