--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/write.css' %}">
 
+{% endblock %}
 {% block content %}
 <div class="info_container">
 	<h3>자취 정보 공유 게시판</h3>
