--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -1,34 +1,38 @@
 {% extends 'base.html' %}
-
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/view_page.css' %}">
+{% endblock %}
 {% block content %}
-<div>
-    <h3>{{ post.title }}}}</h3>
-    <!-- 타이틀 -->
-    <p>{{ post.preface }} | {{ post.preface_2 }}</p>
-    <div>
-        <small>{{ post.pub_date }}</small>
+<div class="view_container">
+    <p class="view_info">{{ post.preface }} | {{ post.preface_2 }}</p>
+    <div class="view_box1">
+        <h3>{{ post.title }}}}</h3>
+        <!-- 타이틀 -->
+            <small>{{ post.pub_date }}</small>
     </div>
-</div>
-<div>
-    <img src="" alt="profile_image">
-    <!-- 프로필이미지 -->
-    <p> {{ post.user_id.user_nickname }} </p>
-    <!-- 닉네임 -->
-</div>
+    <div class="view_box2">
+        <img src="" alt="profile_image">
+        <!-- 프로필이미지 -->
+        <p> {{ post.user_id.user_nickname }} </p>
+        <!-- 닉네임 -->
+    </div>
 
-<div>
-    <p>{{ post.content }}</p>
-    <!-- 내용 -->
-    <a href="{% url 'offcampusUpdate' post.id %}"><span>수정</span></a>
-    <a href="{% url 'offcampusDelete' post.id %}"><span>삭제</span></a>
+    <div>
+        <p class="body">{{ post.content }}</p>
+        <!-- 내용 -->
+        <div class="bottom">
+            <a href="{% url 'offcampusUpdate' post.id %}"><span>수정</span></a>
+            <a href="{% url 'offcampusDelete' post.id %}"><span>삭제</span></a>
+        </div>
+    </div>
+    <div>
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">◀ 이전글</a></li>
+            <li class="page-item"><a class="page-link" href="/offcampusCommunity">목록</a></li>
+            <li class="page-item"><a class="page-link" href="#">다음글 ▶</a></li>
+        </ul>
+    </div>
+    <script>
+    </script>
 </div>
-<div>
-    <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">◀ 이전글</a></li>
-        <li class="page-item"><a class="page-link" href="/offcampusCommunity">목록</a></li>
-        <li class="page-item"><a class="page-link" href="#">다음글 ▶</a></li>
-    </ul>
-</div>
-<script>
-</script>
 {% endblock %}
