--- a/roommate/templates/update.html
+++ b/roommate/templates/update.html
@@ -1,27 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
 
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/write.css' %}">
+{% endblock %}
 {% block content %}
 <body>
+<div class="info_container">
+	<h3>룸메찾기 게시판</h3>
     <form action="" method="POST" enctype="multipart/form-data">
-        {%csrf_token%}
-        <input type="hidden" name="user_id", value="{{ user_id }}">
-        <p>
-            <label for="id_title">제목 :</label>
-            <input type="text" name="title" maxlength="100" required id="id_title" value="{{ write.title }}">
-        </p>
-        <p>
-            <label for="id_body">한마디 :</label>
-            <textarea name="body" required id="id_body" cols="40" rows="10">{{ write.body }}</textarea>
-        </p>
-        <p>
-            <label for="id_state">상태 :</label>
-            <select name="state" id="id_state">
+		<div class="info_container-box1">
+
+            {%csrf_token%}
+            
+            <input type="hidden" name="user_id", value="{{ user_id }}">
+            <select  class="hashtag"  name="state" id="id_state">
                 <option value="1" selected>매칭중</option>
                 <option value="2">매칭완료</option>
             </select>
-        </p>
-        <button type="submit">제출</button>
+
+            <input  id="title"  type="text" name="title" maxlength="100" required id="id_title" value="{{ write.title }}"  
+            placeholder="이곳에 제목을 작성하세요.">
+        </div>
+
+        <textarea class="body"  name="body" required id="id_body" cols="40" rows="10" 
+        placeholder="이곳에 본문을 작성하세요.">{{ write.body }}</textarea>
+
+        <button id="submit"  type="submit">제출</button>
     </form> 
+</div>
 </body>
 
     {% endblock %}
