css 완료/pagination 뼤고..

--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -21,6 +21,8 @@
         </ul>
     </div>
     <div class="mypage_content">
+        <h3 class="mypage_subtitle">회원정보 수정</h3>
+
         <form action="" method="post">
             {% csrf_token %}
 
