--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -9,7 +9,7 @@
 <div class="view_container">
     <p class="view_info">{{ post.preface }} | {{ post.preface_2 }}</p>
     <div class="view_box1">
-        <h3>{{ post.title }}}}</h3>
+        <h3>{{ post.title }}</h3>
         <!-- 타이틀 -->
         <small>{{ post.pub_date }}</small>
     </div>
