자잘한 css 수정

--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -25,7 +25,7 @@
             {% csrf_token %}
             <img id="target_img" src="{{ user.user_image }}" style="width:50px; height:50px;">
             <input type="file" id="user_image" name="user_image" style="display:none;">
-
+            <span id="user_name">{{ user.user_name }}</span>
             <!-- 프로필사진 -->
 
             <p>닉네임 변경</p>
@@ -33,15 +33,15 @@
             <br>
             <!-- 닉네임 -->
             <!-- <p>ID</p> -->
-            <br><br>
+            <br>
             <p>비밀번호 변경</p>
+            {% if messages %}
             <p>
-                {% if messages %}
                 {% for message in messages %}
                 {{ message.message }}
                 {% endfor %}
-                {% endif %}
             </p>
+                {% endif %}
             {% csrf_token %}
 
             <div class="mypage_content-box2">
