--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="{% static 'css/community.css' %}">
 {% endblock %}
 {% block content %}
-<div class="com_container">
+<div class="com_container col-10">
     <h3>기숙사 정보 공유 게시판</h3>
     <a id="com_t" href="">인기 게시글</a>
     <div class="com_sub-content">
