--- a/static/css/community.css
+++ b/static/css/community.css
@@ -28,19 +28,18 @@
     font-family: 'S-CoreDream-5Medium';
     width: 95%;
     height: 35px;
-    padding-left: 15px;
-    padding-bottom: 5px;
+    padding: 5px 15px;
     margin-bottom: 10px;
     font-size: 17px;
-    line-height: 24px;
     color: #000000;
     background: #FFFFFF;
-    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+    border: 0;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.20);
     border-radius: 100px;
 }
 #com_t{
     float: right;
-    margin-right: 150px;
+    margin-right: 100px;
     margin-top: 70px;
     font-size: 15px;
     font-family: 'S-CoreDream-5Medium';
@@ -70,7 +69,8 @@
     width: 35px;
     height: 35px;
     background: #FFFFFF;
-    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
+    border: 0;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.20);
     border-radius: 100px;
     }
 .com_content{
@@ -113,4 +113,12 @@
     color: #1F1F1F;
     white-space  : nowrap;
     width: 100px;
+}
+
+.open{
+    width: 40px;
+    position: fixed;
+    top: 90vh;
+    left: 90vw;
+    z-index: 10;
 }
