--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -9,6 +9,14 @@
     <div>
         <h3 class="search_title" >룸메 찾기</h3>
     </div>
+    <div >
+        <div>
+            <p>룸메찾기 게시판에 처음 오셨군요</p>
+            <p>문답을 통해 <strong>내정보</strong>를 먼저 입력해 주세요</p>
+            <button formaction="{% url 'survey' %}"></button>
+            <button ></button>
+        </div>
+    </div>
     <div class='filter-btn-box'>
         <div class='filter-btn-box-left'>
             <small>* 내가 원하는 룸메에 대해 적어주세요</small>
