--- a/static/css/searchRoommate.css
+++ b/static/css/searchRoommate.css
@@ -4,8 +4,8 @@
 
 .container{
     text-align: center;
-    padding: 10vh 10vw;
-    /* width: 960px; */
+    height: 100vh;
+    padding-top: 10vh;
 }
 
 h6{
@@ -22,12 +22,74 @@ h6{
     margin: 20px 0 50px 0;
 }
 
+/* survey 모달 창 */
+
+#first_open_modal{
+    position: fixed;
+    left: calc(50vw - 200px);
+    width: 400px;
+    margin: 0;
+    /* margin: auto auto; */
+    z-index: 10;
+}
+
+.first_open_content{
+    border-radius: 10px;
+    --borderWidth: 2px;
+    background: white;
+    position: relative;
+    border-radius: var(--borderWidth);
+
+    font-family: 'S-CoreDream-4Regular';
+    font-size: 15px;
+    width: 100%;
+    color: #254074;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
+    padding: 30px;
+}
+
+.first_open_content:after {
+    content: '';
+    position: absolute;
+    top: calc(-1 * var(--borderWidth));
+    left: calc(-1 * var(--borderWidth));
+    height: calc(100% + var(--borderWidth) * 2);
+    width: calc(100% + var(--borderWidth) * 2);
+    border-radius: calc(2 * var(--borderWidth));
+    background: linear-gradient(280.91deg, #3F97FF 8.36%, #918EFF 92.43%);
+    z-index: -1;
+}
+
+.first_open_content p{
+    margin-bottom: 17px;
+}
+
+.modal-btn{
+    font-family: 'yg-jalnan';
+    width: 40%;
+    height: 30px;
+    border: 0;
+    border-radius: 100px;
+    background-color: white;
+    color:#254074;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+    margin: 0 10px;
+}
+
+.modal-btn-X{
+    position: absolute;
+    width: 30px;
+    top:-15px;
+    left: 95%;
+    padding: 0;
+}
+
 
 /* 검색바 위 버튼 */
 .filter-btn-box{
     font-size: 15px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr; */
     gap: 15px;
     justify-content: space-between;
 }
@@ -160,3 +222,51 @@ button:first-child{
     margin-top:5px;
 }
 
+/* 검색바 */
+.search_bar{
+    display: flex;
+    justify-content: center;
+}
+.search_bar form{
+    display: flex;
+    width: 80%;
+}
+.search_bar > h2{
+    font-size: 20px;
+    font-family: 'yg-jalnan';
+}
+
+.search-input-box{
+    width: 100%;
+}
+.search-input{
+    width: 100%;
+    height: 30px;
+    border-radius: 100px;
+    border: 0;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
+    padding: 10px;
+
+    
+}
+
+/* 게시판 테이블 */
+table{
+    font-family: 'S-CoreDream-4Regular';
+    font-size: 15px;
+    width:100%;
+}
+
+.table-bar{
+    border-bottom: 2px 0 rgb(210, 210, 210);
+}
+
+
+/* 채팅아이콘 */
+.open{
+    width: 40px;
+    position: fixed;
+    top: 90vh;
+    left: 90vw;
+    z-index: 10;
+}
