--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -11,10 +11,10 @@
     <!-- border-left 색상 바꾸기 (클릭 모션) -->
     <ul>
         <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
-    <li><a href="{% url 'infoWrite' %}">체크리스트 수정</a></li>
-    <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
-    <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
-</ul>
+        <li><a href="{% url 'infoWrite' %}">체크리스트 수정</a></li>
+        <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
+        <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
+    </ul>
 </div>
 <div class="mypage_content">
     <div class="mypage_scap-content">
@@ -72,6 +72,30 @@
     }
 
     init();
+
+    const mypage_btn = document.querySelector('.mypage_btn');
+    const mypage_list_checkbox = document.querySelectorAll('.mypage_list-checkbox');
+    let edit = 0;
+
+    for ( var i= 0 ; i <mypage_list_checkbox.length ; i++ ){
+        mypage_list_checkbox[i].style.display = 'none';
+    }
+    mypage_btn.addEventListener('click', function(event) {
+        
+        if(edit==0){
+            edit = 1;
+            for ( var i = 0 ; i<mypage_list_checkbox.length ; i++){
+            mypage_list_checkbox[i].style.display = 'block';
+            }
+        }
+        else{
+            edit = 0;
+            for ( var i = 0 ; i<mypage_list_checkbox.length ; i++){
+            mypage_list_checkbox[i].style.display = 'none';
+            }
+        }
+    });
+
 </script>
 
 {% endblock %}
