chekbox js 수정완료

--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -12,7 +12,7 @@
             <form action="" method="get">
                 {% csrf_token %}
                 <input type="text" name="search_keyword" value="{{ search_keyword }}" placeholder="#역세권_오피스텔_어때요?">
-                <button id="com_submit" type="submit">검색아이콘</button>
+                <button id="com_submit" type="submit">o</button>
             </form>
             
             {% if user_id %}
