모달창 완성

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -38,3 +38,11 @@
     </div>
 </body>
 {% endblock %}
+
+
+{% block last %}
+<script>
+    let open_btn = document.querySelector("#btn-modal");
+    open_btn.style.display="none";
+</script>
+{% endblock %}
