--- a/checkmate/templates/domitoryUpdate.html
+++ b/checkmate/templates/domitoryUpdate.html
@@ -37,3 +37,10 @@
 	</form>
 </div>
 {% endblock %}
+
+{% block last %}
+<script>
+    let open_btn = document.querySelector("#btn-modal");
+    open_btn.style.display="none";
+</script>
+{% endblock %}
