--- a/checkmate/templates/infoWrite.html
+++ b/checkmate/templates/infoWrite.html
@@ -82,3 +82,10 @@
 });
 </script>
 {% endblock %}
+
+{% block last %}
+<script>
+    let open_btn = document.querySelector("#btn-modal");
+    open_btn.style.display="none";
+</script>
+{% endblock %}
