--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -36,3 +36,10 @@
 
 </div>
 {% endblock %}
+
+{% block last %}
+<script>
+    let open_btn = document.querySelector("#btn-modal");
+    open_btn.style.display="none";
+</script>
+{% endblock %}
