--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -8,9 +8,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHECKMATE</title>   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>CHECKMATE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+    <!-- 모달 -->
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
     {% block head %}
@@ -39,8 +46,8 @@
                     <stop offset="1" stop-color="#3F97FF" />
                 </linearGradient>
             </defs>
-            </svg>            
-        <a class="d-none d-sm-inline"href="{% url 'main' %}">CHECKMATE</a>
+        </svg>
+        <a class="d-none d-sm-inline" href="{% url 'main' %}">CHECKMATE</a>
     </div>
     <nav>
         <div class="right-menu first">
@@ -67,7 +74,23 @@
         {% block content %}
 
         {% endblock %}
+        <div class="modal_location">
+            <img class="open" id="btn-modal" src="{% static 'img/chat_icon.png' %}" alt="">
+            <div id="modal" class="modal-overlay">
+                <div class="modal-window">
+                    <div class="title">
+                        <h2>진행중인 대화</h2>
+                    </div>
+                    <div class="close-area">X</div>
+                    <div class="content">
+                        <p>대화 목록을 만들어주세요.</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
     <footer>
         <div>
             <p class="font-bold">문의처</p>
@@ -80,5 +103,8 @@
         </div>
     </footer>
 </body>
+<script src="{% static 'js/modal.js' %}"></script>
+{% block last %}
+{% endblock %}
 
 </html>
